# rust-homeworks

./: Cargo.toml  README.md
basic_algs/src/: main.rs
guessing_game/src/: main.rs
macros/builder/: .gitignore  Cargo.toml
macros/builder/builder-derive/: Cargo.toml
macros/builder/builder-derive/src/: lib.rs
macros/builder/src/: lib.rs
macros/builder/tests/: 01-parse.rs
macros/recurrence/: .gitignore
macros/recurrence/src/: main.rs
phone-numbers-encoding/: Cargo.toml
phone-numbers-encoding/src/: main.rs  trie.rs
raytracing/: .gitignore
raytracing/src/: checkerboard.rs  lib.rs  main.rs  primitives.rs  render.rs  scene.rs  sphere.rs  vec.rs  vec3f.rs
src/: fizzbuzz.rs  is_sublist.rs  lib.rs  scoring_table.rs
structs_and_methods/src/: main.rs
structs_and_methods_generic/: Cargo.toml
structs_and_methods_generic/src/: lib.rs  main.rs
